- Fixed the overlap of the menu button and the aside on 960px

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -160,6 +160,11 @@ html, body {
       width: 300px;
       position: sticky;
       top: 20px;
+      padding-right: 35px;
+    }
+
+    @media (min-width: 1024px) {
+      padding-right: 0;
     }
   }
 }
